<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#5E14E1"
    tools:context=".about">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="How to use the app?"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/information1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/information2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/information3"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/information4"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/information5"
        />
</LinearLayout>